@@ -1,3 +1,10 @@
+2005-10-24  Wim Taymans  <wim@fluendo.com>
+
+	* gst-libs/gst/audio/gstbaseaudiosink.c:
+	(gst_base_audio_sink_get_offset), (gst_base_audio_sink_render):
+	Buffers with no timestamps get aligned with previous buffers or
+	on underrun, played ASAP.
+
 2005-10-24  Julien MOUTTE  <julien@moutte.net>
 
 	* gst-libs/gst/video/video.h:
